2002-08-06  Jody Goldberg <jody@gnome.org>

	* Release 2.0.1

2002-08-03  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=88634
	* gnome-settings-mouse.c (set_left_handed) : merge in a variant of the
	  proposed patch.
 
2002-06-19  jacob berkman  <jacob@ximian.com>

	* Makefile.am: fix build

2002-06-17  Jody Goldberg <jody@gnome.org>

	* Release 2.0.0

2002-06-17  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=85327
	* gnome-settings-xsettings.c (translate_string_string) : These strings
	  do look wrong.  The capplet is setting the keys from the schema.
	  we were not mapping them to the write xsettings.  It did not really
	  matter because we were not using xsettings to communicate these
	  values.

2002-06-10  Jody Goldberg <jody@gnome.org>

	* gnome-settings-accessibility-keyboard.c (set_server_from_gconf) :
	  add some bounds checking.

2002-06-06  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-settings-keybindings.c: Make the last string consistent
	with the rest in this file.
	
2002-06-06 Erwann Chenede - <erwann.chenede@sun.com>

       * gnome-settings-keybindings.c (keybindings_filter) :
         do not quit gnome-settings-daemon when pressing Ok 
	 when the warning dialog appears. fix bug #84364
	 Added localization hooks.
	 
2002-05-30  Jody Goldberg <jody@gnome.org>

	* gnome-settings-keyboard.c (xkb_set_keyboard_autorepeat_rate) : Add
	  some bounds checking.

Wed May 29 20:23:13 2002  Jonathan Blandford  <jrb@redhat.com>

	* Makefile.am: Add gnome-settings-keybinding
	* gnome-settings-daemon.c: (gnome_settings_daemon_new): initialize
	keybindings support
	* gnome-settings-keybindings.[ch]: Patch to add support for custom
	keybindings.  Thanks to Erwann Chenede <Erwann.Chenede@sun.com>
	for the patch.

2002-05-22  Jody Goldberg <jody@gnome.org>

	* gnome-settings-accessibility-keyboard.c (set_server_from_gconf) :
	  disable some debug spew.
	(set_gconf_from_server) : ditto.
